// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStringsXml > matches the golden strings.xml for en 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crew.chatNotification.title">%1$s sent a message</string>
    <plurals name="trip.itemCount.label">
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>
</resources>
"
`;

exports[`generateStringsXml > matches the golden strings.xml for ja 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crew.chatNotification.title">%1$sさんがメッセージを送信しました</string>
    <plurals name="trip.itemCount.label">
        <item quantity="other">%1$d件</item>
    </plurals>
</resources>
"
`;

exports[`generateStringsXml > matches the golden strings.xml for vi 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crew.chatNotification.title">%1$s đã gửi một tin nhắn</string>
    <plurals name="trip.itemCount.label">
        <item quantity="other">%1$d mục</item>
    </plurals>
</resources>
"
`;

exports[`generateXcstrings > matches the golden .xcstrings for en, vi and ja 1`] = `
"{
  "sourceLanguage": "en",
  "version": "1.0",
  "strings": {
    "crew.chatNotification.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "%1$@ sent a message"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "%1$@ đã gửi một tin nhắn"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "%1$@さんがメッセージを送信しました"
          }
        }
      }
    },
    "trip.itemCount.label": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "variations": {
            "plural": {
              "one": {
                "stringUnit": {
                  "state": "translated",
                  "value": "%1$lld item"
                }
              },
              "other": {
                "stringUnit": {
                  "state": "translated",
                  "value": "%1$lld items"
                }
              }
            }
          }
        },
        "vi": {
          "variations": {
            "plural": {
              "other": {
                "stringUnit": {
                  "state": "translated",
                  "value": "%1$lld mục"
                }
              }
            }
          }
        },
        "ja": {
          "variations": {
            "plural": {
              "other": {
                "stringUnit": {
                  "state": "translated",
                  "value": "%1$lld件"
                }
              }
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`locale config > matches the golden Android locales_config.xml 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<locale-config xmlns:android="http://schemas.android.com/apk/res/android">
    <locale android:name="en"/>
    <locale android:name="vi"/>
    <locale android:name="th"/>
</locale-config>
"
`;
